--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,10 @@ nav a {
     margin: 0 20px;
 }
 
+#mobileLogo {
+    display: none;
+}
+
 #firstSection {
     background-color: #110902;
     color: #fff;/*#F89500;*/
@@ -95,6 +99,13 @@ nav a {
         height: 100%;
         max-height: 100%;
         object-fit: cover; /* Ensure the image covers the entire div */
+    }
+
+    #mobileLogo {
+        display: block;
+    }
+    #logo {
+        display: none;
     }
 
     nav h3 {
